[package]
name = "RTAPI"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-web = { version = "4", features = ["macros"] }
actix-web-actors = "4"
actix-cors = "0.7"
actix-files = "0.6"

tokio = { version = "1.46.1", features = ["macros", "rt-multi-thread", "time", "fs"] }
futures = "0.3"

reqwest = { version = "0.12.22", features = ["json", "rustls-tls", "stream"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"

sha1 = "0.10"
zip = { version = "4.2.0", default-features = false, features = ["deflate"] }